Revert "Update main bio"
This reverts commit 488b722e966a8dbbd2fea71e3265d19cab1e3dbe.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<img src="img/emilypicture.jpg" class="profile_portrait" alt="Picture of Emily Downey">
 		<h1>Hello world!</h1>
 		<p>
-			My name is Emily Downey. I am a <span class="text-design">web developer</span> from south Texas. 
+			My name is Emily Downey. I am a <span class="text-design">web developer</span> from Texas. 
 		</p><br>
 		<a class="secondary_button" href="work.html"> < Check out my code ></a>
 	</main>
