Update contact.html title/footer

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-		Emily Downey - Portfolio
+		Emily Downey - Contact 
 	</title>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -46,6 +46,7 @@
 		<div class="form"></div>
 			<form action="" method="post">
 				<h2>Contact Me!</h2>
+				Interested in my portfolio or have a question? Send me a message, and I'll get back to you as soon as possible!<br><br>
 				<label for="email" class="standard-label">Email*:</label>
 				<input type="email" id="email" name="email" required><br><br>
 
@@ -64,8 +65,8 @@
 		Find me on:<br>
 		<div class="social-media">
 			<a href="https://github.com/emilydowney"><img src="img/github.svg" alt="Github"></a>
-			<img src="img/twitter.svg" alt="Twitter">
-			<img src="img/linkedin.svg" alt="LinkedIn">
+			<a href="https://codepen.io/emilydowney"><img src="img/codepen.svg" alt="Codepen"></a>
+			<a href="www.linkedin.com/in/emily-m-downey"><img src="img/linkedin.svg" alt="LinkedIn"></a>
 		</div>
 	</footer>
 <script src="js/tota11y.min.js"></script>
