Update footer content

--- a/about.html
+++ b/about.html
@@ -888,13 +888,15 @@
 		Find me on:<br>
 		<div class="social-media">
 			<a href="https://github.com/emilydowney"><img src="img/github.svg" alt="Github"></a>
-			<img src="img/twitter.svg" alt="Twitter">
-			<img src="img/linkedin.svg" alt="LinkedIn"><br><br>
+			<a href="https://codepen.io/emilydowney"><img src="img/codepen.svg" alt="Codepen"></a>
+			<a href="www.linkedin.com/in/emily-m-downey"><img src="img/linkedin.svg" alt="LinkedIn"></a><br><br>
 		</div>
+		<div class="credits">
 			Credits:<br>
-			<a href="https://www.vecteezy.com/free-vector/san-antonio-skyline">San Antonio Skyline Vectors by Vecteezy</a>
-			<a href="https://www.freepik.com/vectors/icons">Icons vector created by freepik - www.freepik.com</a>
+			<a href="https://www.vecteezy.com/free-vector/san-antonio-skyline">San Antonio Skyline Vectors by Vecteezy</a>•
+			<a href="https://www.freepik.com/vectors/icons">Icons vector created by freepik - www.freepik.com</a>•
 			<a href="https://www.freepik.com/vectors/background">Background vector created by alliesinteractive - www.freepik.com</a>
+		</div>
 	</footer>
 <script src="js/tota11y.min.js"></script>
 </body>
