--- a/work.html
+++ b/work.html
@@ -75,8 +75,8 @@
 		Find me on:<br>
 		<div class="social-media">
 			<a href="https://github.com/emilydowney"><img src="img/github.svg" alt="Github"></a>
-			<img src="img/twitter.svg" alt="Twitter">
-			<img src="img/linkedin.svg" alt="LinkedIn">
+			<a href="https://codepen.io/emilydowney"><img src="img/codepen.svg" alt="Codepen"></a>
+			<a href="www.linkedin.com/in/emily-m-downey"><img src="img/linkedin.svg" alt="LinkedIn"></a>
 		</div>
 	</footer>
 <script src="js/tota11y.min.js"></script>
