--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-		Emily Downey 
+		Emily Downey - Portfolio
 	</title>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">	
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
