--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,8 @@
 
 				<label for="message" class="standard-label">Message*:</label>
 				<textarea maxlength="240" id="message"required></textarea>
-				<h5>* Indicates a required field.</h5>
+				<p>* Indicates a required field.
+				</p>
 				<button type="submit" name="Send message">Submit</button>
 			</form>
 		</div>
