--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 		<img src="img/emilypicture.jpg" class="profile_portrait" alt="Picture of Emily Downey">
 		<h1>Hello world!</h1>
 		<p>
-			My name is Emily Downey. I am a <span class="text-design">web developer</span> from Texas. 
+			My name is Emily Downey.<br>
+			I am a <span class="text-design">web developer</span> from Texas. 
 		</p><br>
-		<a class="secondary_button" href="work.html"> < Check out my code ></a>
+		<a class="secondary_button" href="work.html">< Check out my code ></a>
 	</main>
 	<footer class="page-footer">
 		Find me on:<br>
