Update about page text

--- a/about.html
+++ b/about.html
@@ -36,40 +36,36 @@
 	</header>
 	<main class="main_body">
 		<h1>About Me</h1>
-		<p>Hi there! My name is Emily Downey, and I'm an aspiring web developer located in Kerrville, Texas (near San Antonio!). Originally a laboratory scientist, I'm looking to break into the tech industry, and I'm always eager for new projects and challenges. Explore my portfolio for examples of my work and feel free to contact me with any inquiries.
+		<p>Hi there! My name is Emily Downey, and I'm an aspiring web developer located in Kerrville, Texas (near San Antonio!). I'm originally from the medical field with a Bachelor's degree in Medical Laboratory Science. Web development has become a passion of mine, and I'm now looking to break into the tech industry. I'm always eager for new projects and challenges! Explore my portfolio for examples of my work and feel free to contact me with any inquiries.
 		</p>
 		<table>
 			<thead>
 				<tr>
 		    		<th>Skills</th>
-		    		<th>Years of Experience</th>
 		    		<th>Level of Expertise</th>
 		  		</tr>
 		  	</thead>
 		  	<tbody>
 		 		<tr>
 		   			<td>HTML</td>
-		    		<td>< 1</td>
 		    		<td>Intermediate</td>
 		  		</tr>
 				<tr>
 				    <td>CSS</td>
-				    <td>< 1</td>
 				    <td>Intermediate</td>
 				</tr>
 				<tr>
-					<td>Sass & SCSS</td>
-					<td>< 1</td>
-					<td>Beginner</td>
+					<td>Sass & <br>
+					SCSS</td>
+					<td>Basic</td>
 				</tr>
 				<tr>
 				    <td>JavaScript</td>
-				    <td>< 1</td>
-				    <td>Beginner</td>
+				    <td>Basic</td>
 				</tr>
 			</tbody>
 		</table>
-		<div>
+		<div><br>
 			<a href="#" class="button" target="_blank">Download my CV</a>
 		</div><br>
 		<div class="sanantonio">
