Fix linter errors

--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-		Emily Downey - Contact 
+		Emily Downey - Contact
 	</title>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/style.production.css">	
-	<meta name="viewport" content="width=device-width, initial-scale=1">	
+	<link rel="stylesheet" type="text/css" href="css/style.production.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
 			Telephone: <a href="tel:+18303702991">(830)370-2991</a><br>
 			Email: <a href="mailto:emilymdowney@yahoo.com">emilymdowney@yahoo.com</a><br><br>
 		</p>
-		<div class="form"></div>
+		<div class="form">
 			<form action="" method="post">
 				<h2>Contact Me!</h2>
 				Interested in my portfolio or have a question? Send me a message, and I'll get back to you as soon as possible!<br><br>
@@ -54,7 +54,7 @@
 				<input type="tel" id="telephone" name="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}"><br><br>
 
 				<label for="message" class="standard-label">Message*:</label>
-				<textarea maxlength="240" id="message"required></textarea>
+				<textarea maxlength="240" id="message" required></textarea>
 				<p>* Indicates a required field.
 				</p>
 				<button type="submit" name="Send message">Submit</button>
