--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<title>
 		Emily Downey - Portfolio
 	</title>
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">	
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/style.production.css">	
+	<link rel="stylesheet" type="text/css" href="css/style.production.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -39,9 +39,9 @@
 		<h1>Hello world!</h1>
 		<p>
 			My name is Emily Downey.<br>
-			I am a <span class="text-design">web developer</span> from Texas. 
+			I am a <span class="text-design">web developer</span> from Texas.
 		</p><br>
-		<a class="secondary_button" href="work.html">< Check out my code ></a>
+		<a class="secondary_button" href="work.html">{ Check out my code }</a>
 	</main>
 	<footer class="page-footer">
 		Find me on:<br>
