Fix html errors

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 			Email: <a href="mailto:emilymdowney@yahoo.com">emilymdowney@yahoo.com</a><br><br>
 		</p>
 		<div class="form">
-			<form action="" method="post">
+			<form action="/action" method="post">
 				<h2>Contact Me!</h2>
 				Interested in my portfolio or have a question? Send me a message, and I'll get back to you as soon as possible!<br><br>
 				<label for="email" class="standard-label">Email*:</label>
