--- a/about.html
+++ b/about.html
@@ -65,15 +65,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 			<svg class="sanantonio"
-			   xmlns:dc="http://purl.org/dc/elements/1.1/"
-			   xmlns:cc="http://creativecommons.org/ns#"
-			   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-			   xmlns:svg="http://www.w3.org/2000/svg"
-			   xmlns="http://www.w3.org/2000/svg"
-			   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-			   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
 			   version="1.1"
 			   x="0px"
 			   y="0px"
@@ -82,12 +74,7 @@
 			   viewBox="0 0 2515.0351 1993.8782"
 			   enable-background="new 0 0 2800 2800"
 			   xml:space="preserve"
-			   id="svg246"
-			   sodipodi:docname="sanantonio.svg"
-			   inkscape:version="1.0.2 (e86c8708, 2021-01-15)"><metadata
-			   id="metadata252"><rdf:RDF><cc:Work
-			       rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type
-			         rdf:resource="http://purl.org/dc/dcmitype/StillImage" /><dc:title></dc:title></cc:Work></rdf:RDF></metadata><defs
+			   id="svg246"><defs
 			   id="defs250"><clipPath
 			     clipPathUnits="userSpaceOnUse"
 			     id="clipPath1082"><rect
@@ -104,31 +91,7 @@
 			       width="1958.4"
 			       height="1198.4113"
 			       x="420.79999"
-			       y="672.59998" /></clipPath></defs><sodipodi:namedview
-			   pagecolor="#ffffff"
-			   bordercolor="#666666"
-			   borderopacity="1"
-			   objecttolerance="10"
-			   gridtolerance="10"
-			   guidetolerance="10"
-			   inkscape:pageopacity="0"
-			   inkscape:pageshadow="2"
-			   inkscape:window-width="1235"
-			   inkscape:window-height="686"
-			   id="namedview248"
-			   showgrid="false"
-			   inkscape:zoom="0.7984349"
-			   inkscape:cx="269.44053"
-			   inkscape:cy="259.33389"
-			   inkscape:window-x="0"
-			   inkscape:window-y="23"
-			   inkscape:window-maximized="0"
-			   inkscape:current-layer="svg246"
-			   inkscape:document-rotation="0"
-			   fit-margin-top="0"
-			   fit-margin-left="0"
-			   fit-margin-right="0"
-			   fit-margin-bottom="0"/>
+			       y="672.59998" /></clipPath></defs>
 			<g
 			   id="BACKGROUND"
 			   transform="matrix(1.2842295,0,0,1.6637679,-540.40376,-1119.0502)"
