--- a/contact.html
+++ b/contact.html
@@ -43,12 +43,13 @@
 			Email: <a href="mailto:emilymdowney@yahoo.com">emilymdowney@yahoo.com</a><br><br>
 		</p>
 		<div class="form">
-			<form action="/action" method="post">
+			<form action="mailto:emilymdowney@yahoo.com" method="post">
 				<h2>Contact Me!</h2>
 				Interested in my portfolio or have a question? Send me a message, and I'll get back to you as soon as possible!<br><br>
-				<label for="email" class="standard-label">Email*:</label>
-				<input type="email" id="email" name="email" required><br><br>
-
+				<div class="input-wrapper">
+					<label for="email" class="standard-label">Email*:</label>
+					<input type="email" id="email" name="email" required>
+				</div><br>
 				<label for="telephone" class="standard-label">Telephone:</label>
 				<input type="tel" id="telephone" name="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}"><br><br>
 
@@ -69,7 +70,7 @@
 			<a href="https://linkedin.com/in/emily-m-downey" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
 		</div>
 	</footer>
-<script src="js/tota11y.min.js"></script>
+<script src="js/style.js"></script>
 </body>
 
 </html>
