Added Pokédex project study

--- a/work.html
+++ b/work.html
@@ -2,83 +2,81 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<title>
-		Emily Downey - Portfolio
-	</title>
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/style.production.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <title>
+    Emily Downey - Portfolio
+  </title>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-	<header class="page-header">
-		<img class="page-header_item" id="header_logo" src="img/fullname.svg" alt="Emily Downey logo image">
-		<nav class="page-header_item">
-			<ul role="menubar" class="navigation-list">
-				<li role="presentation">
-					<a role="menuitem" href="index.html" class="navigation-list__item">Home</a>
-				</li>
-				<li role="presentation">
-					<a role="menuitem" href="about.html" class="navigation-list__item">About</a>
-				</li>
-				<li role="presentation">
-					<a role="menuitem" href="work.html" class="navigation-list__item--active">Work</a>
-				</li>
-				<li role="presentation">
-					<a role="menuitem" href="contact.html" class="navigation-list__item">Contact</a>
-				</li>
-			</ul>
-		</nav>
-	</header>
-	<section class="main_body">
-		<h1>Work</h1>
-		<div class="grid">
-			<div class="grid_item">
-				<h2>Portfolio Item</h2>
-				<p>This project is an example of some of my code.</p>
-				<a href="#">See project on GitHub</a>
-			</div>
-			<div class="grid_item">
-				<h2>Portfolio Item</h2>
-				<p>This project is an example of some of my code.</p>
-				<a href="#">See project on GitHub</a>
-			</div>
-			<div class="grid_item">
-				<h2>Portfolio Item</h2>
-				<p>This project is an example of some of my code.</p>
-				<a href="#">See project on GitHub</a>
-			</div>
-			<div class="grid_item">
-				<h2>Portfolio Item</h2>
-				<p>This project is an example of some of my code.</p>
-				<a href="#">See project on GitHub</a>
-			</div>
-			<div class="grid_item">
-				<h2>Portfolio Item</h2>
-				<p>This project is an example of some of my code.</p>
-				<a href="#">See project on GitHub</a>
-			</div>
-			<div class="grid_item">
-				<h2>Portfolio Item</h2>
-				<p>This project is an example of some of my code.</p>
-				<a href="#">See project on GitHub</a>
-			</div>
+  <header class="page-header">
+    <img class="page-header_item" id="header_logo" src="img/fullname.svg" alt="Emily Downey logo image">
+    <nav class="page-header_item">
+      <ul role="menubar" class="navigation-list">
+        <li role="presentation">
+          <a role="menuitem" href="index.html" class="navigation-list__item">Home</a>
+        </li>
+        <li role="presentation">
+          <a role="menuitem" href="about.html" class="navigation-list__item">About</a>
+        </li>
+        <li role="presentation">
+          <a role="menuitem" href="work.html" class="navigation-list__item--active">Work</a>
+        </li>
+        <li role="presentation">
+          <a role="menuitem" href="contact.html" class="navigation-list__item">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <section class="main_body">
+    <h1>Work</h1>
+    <div class="grid">
+      <div class="grid_item">
+        <img class="work" src="img/pokedexscreen.png">
+        <h2>Pokédex - Javascript App</h2>
+        <p>A web application to load and view data from an external API. Designed and structured the web app
+          using HTML, CSS, and JavaScript/jQuery.</p>
+        <a href="pokedex-app.html"><button>More Info</button></a>
+        <a href="https://emilydowney.github.io/js-app/" target="_blank"><button>Demo</button></a>
+        <a href="https://github.com/emilydowney/js-app" target="_blank"><button>GitHub</button></a>
+      </div>
+      <div class="grid_item">
+        <h2>Portfolio Item</h2>
+        <p>This project is an example of some of my code.</p>
+        <a href="#">See project on GitHub</a>
+      </div>
+      <div class="grid_item">
+        <h2>Portfolio Item</h2>
+        <p>This project is an example of some of my code.</p>
+        <a href="#">See project on GitHub</a>
+      </div>
+      <div class="grid_item">
+        <h2>Portfolio Item</h2>
+        <p>This project is an example of some of my code.</p>
+        <a href="#">See project on GitHub</a>
+      </div>
 
-		</div>
+    </div>
 
-	</section>
-	<footer class="page-footer">
-		Find me on:<br>
-		<div class="social-media">
-			<a href="https://github.com/emilydowney" target="_blank"><img src="img/github.svg" alt="Github"></a>
-			<a href="https://codepen.io/emilydowney" target="_blank"><img src="img/codepen.svg" alt="Codepen"></a>
-			<a href="https://linkedin.com/in/emily-m-downey" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
-		</div>
-	</footer>
+
+  </section>
+  <footer class="page-footer">
+    Find me on:<br>
+    <div class="social-media">
+      <a href="https://github.com/emilydowney" target="_blank"><img src="img/github.svg" alt="Github"></a>
+      <a href="https://codepen.io/emilydowney" target="_blank"><img src="img/codepen.svg" alt="Codepen"></a>
+      <a href="https://linkedin.com/in/emily-m-downey" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
+    </div>
+  </footer>
+  <script src="js/work.js"></script>
 </body>
 
 </html>
