Updating work section

--- a/work.html
+++ b/work.html
@@ -49,9 +49,14 @@
         <a href="https://github.com/emilydowney/js-app" target="_blank"><button>GitHub</button></a>
       </div>
       <div class="grid_item">
-        <h2>Portfolio Item</h2>
-        <p>This project is an example of some of my code.</p>
-        <a href="#">See project on GitHub</a>
+        <img class="work" src="img/FaveFlix.png">
+        <h2>FaveFlix - FullStack Project/h2></h2>
+        <p>A movie application built utilizing the MERN(MongoDB, Express, React, and NodeJS). Back-end includes a REST
+          API built from scratch, while the front-end boasts a single page client application with React-Bootstrap
+          incorporated for some of the design elements.</p>
+        <a href=""><button>More Info</button></a>
+        <a href="https://faveflix.netlify.app/" target="_blank"><button>Demo</button></a>
+        <a href="https://github.com/emilydowney/FaveFlix-Client" target="_blank"><button>GitHub</button></a>
       </div>
       <div class="grid_item">
         <h2>Portfolio Item</h2>
@@ -76,7 +81,6 @@
       <a href="https://linkedin.com/in/emily-m-downey" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
     </div>
   </footer>
-  <script src="js/work.js"></script>
 </body>
 
 </html>
