--- a/contact.html
+++ b/contact.html
@@ -2,75 +2,78 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<title>
-		Emily Downey - Contact
-	</title>
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/style.production.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <title>
+    Emily Downey - Contact
+  </title>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.production.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-	<header class="page-header">
-		<img class="page-header_item" id="header_logo" src="img/fullname.svg" alt="Emily Downey logo image">
-		<nav class="page-header_item">
-			<ul role="menubar" class="navigation-list">
-				<li role="presentation">
-					<a role="menuitem" href="index.html" class="navigation-list__item">Home</a>
-				</li>
-				<li role="presentation">
-					<a role="menuitem" href="about.html" class="navigation-list__item">About</a>
-				</li>
-				<li role="presentation">
-					<a role="menuitem" href="work.html" class="navigation-list__item">Work</a>
-				</li>
-				<li role="presentation">
-					<a role="menuitem" href="contact.html" class="navigation-list__item--active">Contact</a>
-				</li>
-			</ul>
-		</nav>
-	</header>
-	<main class="main_body">
-		<h1>Contact</h1>
-		<p>
-			Emily Downey<br>
-			Kerrville, TX 78028<br>
-			<br>
-			Email: <a href="mailto:emilymdowney@yahoo.com">emilymdowney@yahoo.com</a><br><br>
-		</p>
-		<div class="form">
-			<form action="mailto:emilymdowney@yahoo.com" method="post">
-				<h2>Contact Me!</h2>
-				Interested in my portfolio or have a question? Send me a message, and I'll get back to you as soon as possible!<br><br>
-				<div class="input-wrapper">
-					<label for="email" class="standard-label">Email*:</label>
-					<input type="email" id="email" name="email" required>
-				</div><br>
-				<label for="telephone" class="standard-label">Telephone:</label>
-				<input type="tel" id="telephone" name="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}"><br><br>
+  <header class="page-header">
+    <img class="page-header_item" id="header_logo" src="img/fullname.svg" alt="Emily Downey logo image">
+    <nav class="page-header_item">
+      <ul role="menubar" class="navigation-list">
+        <li role="presentation">
+          <a role="menuitem" href="index.html" class="navigation-list__item">Home</a>
+        </li>
+        <li role="presentation">
+          <a role="menuitem" href="about.html" class="navigation-list__item">About</a>
+        </li>
+        <li role="presentation">
+          <a role="menuitem" href="work.html" class="navigation-list__item">Work</a>
+        </li>
+        <li role="presentation">
+          <a role="menuitem" href="contact.html" class="navigation-list__item--active">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main class="main_body">
+    <h1>Contact</h1>
+    <p>
+      Emily Downey<br>
+      Kerrville, TX 78028<br>
+      <br>
+      Email: <a href="mailto:emilymdowney@yahoo.com">emilymdowney@yahoo.com</a><br><br>
+    </p>
+    <div class="form">
+      <form action="mailto:emilymdowney@yahoo.com" method="post" name="email_form">
+        <h2>Contact Me!</h2>
+        Interested in my portfolio or have a question? Send me a message, and I'll get back to you as soon as
+        possible!<br><br>
+        <div class="input-wrapper">
+          <label for="email" class="standard-label">Email*:</label>
+          <input type="email" id="email" name="email" required>
+        </div><br>
+        <label for="telephone" class="standard-label">Telephone:</label>
+        <input type="tel" id="telephone" name="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}"><br><br>
 
-				<label for="message" class="standard-label">Message*:</label>
-				<textarea maxlength="240" id="message" required></textarea>
-				<p>* Indicates a required field.
-				</p>
-				<button type="submit" name="Send message">Submit</button>
-			</form>
-		</div>
-	</main>
+        <label for="message" class="standard-label">Message*:</label>
+        <textarea maxlength="240" id="message" required></textarea>
+        <p>* Indicates a required field.
+        </p>
+        <button type="submit" name="Send message">Submit</button>
+      </form>
+    </div>
+  </main>
 
-	<footer class="page-footer">
-		Find me on:<br>
-		<div class="social-media">
-			<a href="https://github.com/emilydowney" target="_blank"><img src="img/github.svg" alt="Github"></a>
-			<a href="https://codepen.io/emilydowney" target="_blank"><img src="img/codepen.svg" alt="Codepen"></a>
-			<a href="https://linkedin.com/in/emily-m-downey" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
-		</div>
-	</footer>
-<script src="js/style.js"></script>
+  <footer class="page-footer">
+    Find me on:<br>
+    <div class="social-media">
+      <a href="https://github.com/emilydowney" target="_blank"><img src="img/github.svg" alt="Github"></a>
+      <a href="https://codepen.io/emilydowney" target="_blank"><img src="img/codepen.svg" alt="Codepen"></a>
+      <a href="https://linkedin.com/in/emily-m-downey" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
+    </div>
+  </footer>
+  <script src="js/style.js"></script>
 </body>
 
 </html>
