Add event finder to portfolio

--- a/work.html
+++ b/work.html
@@ -59,14 +59,13 @@
         <a href="https://github.com/emilydowney/FaveFlix-Client" target="_blank"><button>GitHub</button></a>
       </div>
       <div class="grid_item">
-        <h2>Portfolio Item</h2>
-        <p>This project is an example of some of my code.</p>
-        <a href="#">See project on GitHub</a>
-      </div>
-      <div class="grid_item">
-        <h2>Portfolio Item</h2>
-        <p>This project is an example of some of my code.</p>
-        <a href="#">See project on GitHub</a>
+        <img class="work" src="img/eventfinder.png">
+        <h2>Event Finder App</h2>
+        <p>A serverless, progressive web application (PWA) built using React. The app is created based on a test-driven
+          development (TDD) technique, and fetches calender events from the Google Calendar API.</p>
+        <a href="eventfinder.html"><button>More Info</button></a>
+        <a href="https://emilydowney.github.io/events-app/" target="_blank"><button>Demo</button></a>
+        <a href="https://github.com/emilydowney/events-app" target="_blank"><button>GitHub</button></a>
       </div>
 
     </div>
