--- a/contact.html
+++ b/contact.html
@@ -39,12 +39,14 @@
   <main class="main_body">
     <h1>Contact</h1>
     <p>
+      Interested in my portfolio or have a question? Send me a message, and I'll get back to you as soon as possible!
+      <br><br>
       Emily Downey<br>
       Kerrville, TX 78028<br>
       <br>
-      Email: <a href="mailto:emilymdowney@yahoo.com">emilymdowney@yahoo.com</a><br><br>
+      Email: <a href="edowney.dev@gmail.com">edowney.dev@gmail.com</a><br><br>
     </p>
-    <div class="form">
+    <!--- <div class="form">
       <form action="mailto:emilymdowney@yahoo.com" method="post" name="email_form">
         <h2>Contact Me!</h2>
         Interested in my portfolio or have a question? Send me a message, and I'll get back to you as soon as
@@ -62,7 +64,7 @@
         </p>
         <button type="submit" name="Send message">Submit</button>
       </form>
-    </div>
+    </div> --->
   </main>
 
   <footer class="page-footer">
