--- a/work.html
+++ b/work.html
@@ -50,11 +50,11 @@
       </div>
       <div class="grid_item">
         <img class="work" src="img/FaveFlix.png">
-        <h2>FaveFlix - FullStack Project/h2></h2>
+        <h2>FaveFlix - FullStack Project</h2>
         <p>A movie application built utilizing the MERN(MongoDB, Express, React, and NodeJS). Back-end includes a REST
           API built from scratch, while the front-end boasts a single page client application with React-Bootstrap
           incorporated for some of the design elements.</p>
-        <a href=""><button>More Info</button></a>
+        <a href="FaveFlixReact.html"><button>More Info</button></a>
         <a href="https://faveflix.netlify.app/" target="_blank"><button>Demo</button></a>
         <a href="https://github.com/emilydowney/FaveFlix-Client" target="_blank"><button>GitHub</button></a>
       </div>
@@ -67,6 +67,27 @@
         <a href="https://emilydowney.github.io/events-app/" target="_blank"><button>Demo</button></a>
         <a href="https://github.com/emilydowney/events-app" target="_blank"><button>GitHub</button></a>
       </div>
+      <div class="grid_item">
+        <img class="work" src="img/AngularImg.png">
+        <h2>FaveFlix - Angular Client</h2>
+        <p>Angular client-side for a movie application calle FaveFlix. Built using existing server-side code (REST API
+          and database).
+        </p>
+        <a href="angular.html"><button>More Info</button></a>
+        <a href="https://emilydowney.github.io/faveflix-angular-client/welcome"
+          target="_blank"><button>Demo</button></a>
+        <a href="https://github.com/emilydowney/faveflix-angular-client" target="_blank"><button>GitHub</button></a>
+      </div>
+      <div class="grid_item">
+        <img class="work" src="img/PortfolioImg.png">
+        <h2>Portfolio Site</h2>
+        <p>A simple static portfolio website, built using HTML, CSS, and JavaScript to display my work as a developer.
+        </p>
+        <a href="portfolio.html"><button>More Info</button></a>
+        <a href="http://www.emdowney.com/" target="_blank"><button>Demo</button></a>
+        <a href="https://github.com/emilydowney/portfolio-website" target="_blank"><button>GitHub</button></a>
+      </div>
+
 
     </div>
 
