Update About Me page

--- a/work.html
+++ b/work.html
@@ -54,7 +54,7 @@
         <p>A movie application built utilizing the MERN(MongoDB, Express, React, and NodeJS). Back-end includes a REST
           API built from scratch, while the front-end boasts a single page client application with React-Bootstrap
           incorporated for some of the design elements.</p>
-        <a href="FaveFlixReact.html"><button>More Info</button></a>
+        <a href="faveflixreact.html"><button>More Info</button></a>
         <a href="https://faveflix.netlify.app/" target="_blank"><button>Demo</button></a>
         <a href="https://github.com/emilydowney/FaveFlix-Client" target="_blank"><button>GitHub</button></a>
       </div>
