--- a/about.html
+++ b/about.html
@@ -56,11 +56,11 @@
         these passions are part of what drew me to web development, as it's an ever growing field with endless room for
         discovery and learning.<br><br>
 
-        <a href="#" class="button" target="_blank">Resume Coming Soon</a>
+        <a href="EmilyDowneyWebPortfolio.pdf" class="button" target="_blank">Download Resume</a>
 
       </p>
     </div>
-    <h1>My Skills</h1>
+    <h1 class="skills_header">My Skills</h1>
     <div class="info_desc">
       <p>I have a completed a number of full stack web development projects independently, as well as through my
         coursework at CareerFoundry. The following is a list of technologies I am familiar with and have worked with in
