--- a/index.html
+++ b/index.html
@@ -2,55 +2,57 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<title>
-		Emily Downey - Portfolio
-	</title>
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/style.production.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <title>
+    Emily Downey - Portfolio
+  </title>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.production.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-	<header class="page-header">
-		<img class="page-header_item" id="header_logo" src="img/fullname.svg" alt="Emily Downey logo image">
-		<nav class="page-header_item">
-			<ul role="menubar" class="navigation-list">
-				<li role="presentation">
-					<a role="menuitem" href="index.html" class="navigation-list__item--active">Home</a>
-				</li>
-				<li role="presentation">
-					<a role="menuitem" href="about.html" class="navigation-list__item">About</a>
-				</li>
-				<li role="presentation">
-					<a role="menuitem" href="work.html" class="navigation-list__item">Work</a>
-				</li>
-				<li role="presentation">
-					<a role="menuitem" href="contact.html" class="navigation-list__item">Contact</a>
-				</li>
-			</ul>
-		</nav>
-	</header>
-	<main class="profile">
-		<img src="img/emilypicture.jpg" class="profile_portrait" alt="Picture of Emily Downey">
-		<h1>Hello world!</h1>
-		<p>
-			My name is Emily Downey.<br>
-			I am a <span class="text-design">web developer</span> from Texas.
-		</p><br>
-		<a class="secondary_button" href="work.html">{ Check out my code }</a>
-	</main>
-	<footer class="page-footer">
-		Find me on:<br>
-		<div class="social-media">
-			<a href="https://github.com/emilydowney" target="_blank"><img src="img/github.svg" alt="Github"></a>
-			<a href="https://codepen.io/emilydowney" target="_blank"><img src="img/codepen.svg" alt="Codepen"></a>
-			<a href="https://linkedin.com/in/emily-m-downey" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
-		</div>
-	</footer>
+  <header class="page-header">
+    <img class="page-header_item" id="header_logo" src="img/fullname.svg" alt="Emily Downey logo image">
+    <nav class="page-header_item">
+      <ul role="menubar" class="navigation-list">
+        <li role="presentation">
+          <a role="menuitem" href="index.html" class="navigation-list__item--active">Home</a>
+        </li>
+        <li role="presentation">
+          <a role="menuitem" href="about.html" class="navigation-list__item">About</a>
+        </li>
+        <li role="presentation">
+          <a role="menuitem" href="work.html" class="navigation-list__item">Work</a>
+        </li>
+        <li role="presentation">
+          <a role="menuitem" href="contact.html" class="navigation-list__item">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main class="profile">
+    <img src="img/profileimage.png" class="profile_portrait" alt="Picture of Emily Downey">
+    <h1>Hello world!</h1>
+    <p>
+      My name is Emily Downey.<br>
+      I am a <span class="text-design">web developer</span> from Texas.
+    </p><br>
+    <a class="secondary_button" href="work.html">{ Check out my code }</a>
+  </main>
+  <footer class="page-footer">
+    Find me on:<br>
+    <div class="social-media">
+      <a href="https://github.com/emilydowney" target="_blank"><img src="img/github.svg" alt="Github"></a>
+      <a href="https://codepen.io/emilydowney" target="_blank"><img src="img/codepen.svg" alt="Codepen"></a>
+      <a href="https://linkedin.com/in/emily-m-downey" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
+    </div>
+  </footer>
 </body>
 
 </html>
